# Bouncing-Ball-cpp

./: CMakeLists.txt  README.md
include/: args.hpp  ball.hpp  clgl_manager.hpp  display.hpp  fps.hpp  kernel.hpp
src/: args.cpp  ball.cpp  clgl_manager.cpp  display.cpp  fps.cpp  kernel.cpp  main.cpp  test.cpp
